--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,26 @@
+certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
 cryptography==44.0.2
 customtkinter==5.2.2
 darkdetect==0.8.0
+idna==3.10
+MouseInfo==0.1.3
+mypy==1.15.0
+mypy-extensions==1.0.0
 packaging==25.0
 pdfminer.six==20250327
 pdfplumber==0.11.6
 pillow==11.2.1
+PyAutoGUI==0.9.54
 pycparser==2.22
+PyGetWindow==0.0.9
+PyMsgBox==1.0.9
 pypdfium2==4.30.1
+pyperclip==1.9.0
+PyRect==0.2.0
+PyScreeze==1.0.1
+pytweening==1.2.0
+requests==2.32.3
+typing_extensions==4.13.2
+urllib3==2.3.0
